videorate: hits assert with drop-only and variable output framerate
gst-launch-1.0 videotestsrc do-timestamp=1 num-buffers=5 ! videorate drop-only=true ! video/x-raw,framerate=0/1 ! queue ! fakesink
ERROR:../subprojects/gst-plugins-base/gst/videorate/gstvideorate.c:745:gst_video_rate_push_buffer: assertion failed: (GST_BUFFER_DURATION_IS_VALID (outbuf))
Bail out! ERROR:../subprojects/gst-plugins-base/gst/videorate/gstvideorate.c:745:gst_video_rate_push_buffer: assertion failed: (GST_BUFFER_DURATION_IS_VALID (outbuf))