videorate: fix assert fail due to invalid buffer duration

In `drop-only` mode, when pushing an input buffer, the buffer duration
was always assumed valid i.e. `invalid_duration`  as FALSE. This was causing
an assert failure when first few buffers don't have the duration calculated yet

Fixes https://gitlab.freedesktop.org/gstreamer/gstreamer/-/issues/2886

Part-of: <https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/9829>